<?xml version="1.0"?>
<package format="3">
  <name>remap_regions_register</name>
  <version>0.2.1</version>
  <description>Remap regions register package</description>

  <maintainer email="lorenzo.ferrini@pal-robotics.com">Lorenzo Ferrini</maintainer>

  <license>Apache License 2.0</license>

  <author email="lorenzo.ferrini@pal-robotics.com">Lorenzo Ferrini</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
